# celery-multiple-python-versions-containers

./: .gitignore  README.md  docker-compose.yml
orchestrator/: Dockerfile  app.py  pyproject.toml
worker/: Dockerfile  pyproject.toml  tasks.py
